Add parking_lot and optimize argument handling
- Switch to parking_lot::Mutex for improved performance
- Add parking_lot to dependencies
- Store parsed CLI arguments in a static Arc for reuse across threads
- Update Cargo.lock for new/updated dependencies
- Limit HTTP request body size to 16 KiB and handle errors accordingly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ h3-quinn = "0.0.10"
 flate2 = "1"
 bytes = "1.6.1"
 clap = { version = "4.5.15", features = ["derive"] }
+parking_lot = "0.12.5"
 
 [[bin]]
 name = "dns_probe_resolver"
