--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,9 @@ flate2 = "1"
 bytes = "1.6.1"
 clap = { version = "4.5.15", features = ["derive"] }
 parking_lot = "0.12.5"
+zip = "2.2.2"
+csv = "1.3"
+ipnetwork = "0.20"
 
 [[bin]]
 name = "dns_probe_resolver"
